Bug 55021 - Quote phrase affects line wrap
Summary: Quote phrase affects line wrap
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: composer (other bugs)
Version First Reported In: 1.10.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: triaged
: 118811 (view as bug list)
Depends on:
Blocks:
 
Reported: 2003-02-22 15:37 UTC by dcs
Modified: 2009-08-30 01:12 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description dcs 2003-02-22 15:37:39 UTC
Version:           1.5 (using KDE KDE 3.1)
Installed from:    Compiled From Sources
Compiler:          3.2.1-r6 
OS:          Linux

Related to #46492:
Changing the KMail quote phrase leading character from '>" to '#" (a common choice) causes line wrapping even when word wrap is disabled.

Original quoted text:

Here's a simple example of a long line being quoted.  As you may note, it runs on for quite a while,
then wraps to the next line at the word 'then' before continuing.

Quoted by KMail with '>%_' for quote phrase:

On Saturday 22 February 2003 07:24, you wrote:
> Here's a simple example of a long line being quoted.  As you may note, it
> runs on for quite a while, then wraps to the next line at the word 'then'
> before continuing.

Quoted by KMail with '#%_' for quote phrase:

On Saturday 22 February 2003 07:24, you wrote:
# Here's a simple example of a long line being quoted.  As you may note, it
 runs on for quite a while, # then wraps to the next line at the word 'then'
 before continuing.
#

IMHO, this is just plain wrong.  In both cases word wrap is disabled per Composer/General, so the change of quote phrase shouldn't have turned it on at all, much less resulted in b0rken wrapping.
Comment 1 Tom Albers 2004-09-08 17:53:48 UTC
Confirmed. Steps to reproduce:
1. take a mail
2. press reply see how it is wrapped
3. close composer
4. go to config and change quotation to #%_
5. press reply and see the result is wrong.
Comment 2 Don Sanders 2004-09-09 10:00:35 UTC
I suspect the hardcoded characters in the line
       if ((c == '>') || (c == ':') || (c == '|'))
in splitLine( QString &line) in kmmessage.cpp is responsible for this.

But it's not that simple as the quote indicator in the configuration 
dialog is for outgoing not incoming mails.

I mean my quote indicator might be '#', but other people may use a 
different quote indicator e.g. '>'. '

Don.

Comment 3 Dominik Tritscher 2008-08-31 15:09:12 UTC
I can reproduce that bug following the steps from comment #1 with KDE4.1 from Kubuntu packages.
Comment 4 Martin Koller 2009-08-01 19:32:44 UTC
SVN commit 1005664 by mkoller:

BUG: 55021

add quote string _after_ lines have been wrapped, which avoids
that our own special quote-string is somewhere inside the then wrapped lines


 M  +3 -2      kmmessage.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1005664
Comment 5 Thomas McGuire 2009-08-05 21:48:21 UTC
SVN commit 1007468 by tmcguire:

Backport r1005664 by mkoller from trunk to the 4.3 branch:

CCBUG: 55021

add quote string _after_ lines have been wrapped, which avoids
that our own special quote-string is somewhere inside the then wrapped lines



 M  +3 -2      kmmessage.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1007468
Comment 6 Martin Koller 2009-08-30 01:12:02 UTC
*** Bug 118811 has been marked as a duplicate of this bug. ***