BUG: 55021

add quote string _after_ lines have been wrapped, which avoids
that our own special quote-string is somewhere inside the then wrapped lines

svn path=/trunk/KDE/kdepim/; revision=1005664