kmmessage.cpp
@@ -570,12 +570,13 @@ QString KMMessage::asQuotedString( const QString& aIndentStr,
 
   const QString indentStr = StringUtil::formatString( aIndentStr, from() );
 
+  if ( s->smartQuote && s->wordWrap )
+    content = StringUtil::smartQuote( content, s->wrapCol - indentStr.length() );
+
   content.replace( '\n', '\n' + indentStr );
   content.prepend( indentStr );
   content += '\n';
 
-  if ( s->smartQuote && s->wordWrap )
-    return StringUtil::smartQuote( content, s->wrapCol );
   return content;
 }
 
